Added licensesUrl to package.json.

--- a/Assets/Package/Tuntenfisch/Grass/package.json
+++ b/Assets/Package/Tuntenfisch/Grass/package.json
@@ -7,5 +7,6 @@
 	"author": {
 		"name": "Tuntenfisch",
 		"url": "https://github.com/Tuntenfisch"
-	}
+	},
+	"licensesUrl": "https://github.com/Tuntenfisch/Tuntenfisch-Grass-Package/blob/release/LICENSE"
 }
