--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,10 +2,13 @@
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.2.5",
     "com.tuntenfisch.commons": "https://github.com/Tuntenfisch/Tuntenfisch-Commons-Package.git?path=Assets/Package/Tuntenfisch/Commons",
-    "com.unity.collab-proxy": "1.15.12",
+    "com.unity.collab-proxy": "1.15.13",
+    "com.unity.collections": "1.1.0",
     "com.unity.ide.rider": "3.0.12",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.jobs": "0.11.0-preview.6",
+    "com.unity.mathematics": "1.2.5",
     "com.unity.render-pipelines.universal": "12.1.4",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
